@@ -9,19 +9,18 @@ import gov.cms.dpc.queue.MemoryBatchQueue;
 import gov.cms.dpc.queue.models.JobQueueBatch;
 import gov.cms.dpc.queue.models.JobQueueBatchFile;
 import gov.cms.dpc.testing.BufferedLoggerHandler;
+import jakarta.ws.rs.core.Response;
 import org.bouncycastle.util.encoders.Hex;
 import org.eclipse.jetty.http.HttpStatus;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 
-import javax.ws.rs.core.Response;
 import java.time.OffsetDateTime;
 import java.time.ZoneOffset;
 import java.time.ZonedDateTime;
 import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -115,7 +114,7 @@ public class JobResourceTest {
         final var queue = new MemoryBatchQueue(100);
 
         // Setup a completed job
-        final var requestUrl = String.format(TEST_JOB_URL, UUID.randomUUID().toString());
+        final var requestUrl = String.format(TEST_JOB_URL, UUID.randomUUID());
         final var jobID = queue.createJob(orgID,
                 TEST_ORG_NPI,
                 TEST_PROVIDER_NPI,
@@ -130,7 +129,7 @@ public class JobResourceTest {
         runningJob.fetchNextPatient(AGGREGATOR_ID);
         final var results = JobQueueBatch.validResourceTypes.stream()
                 .map(resourceType -> runningJob.addJobQueueFile(resourceType, 0, 1))
-                .collect(Collectors.toList());
+                .toList();
 
         queue.completeBatch(runningJob, AGGREGATOR_ID);
 
@@ -164,7 +163,7 @@ public class JobResourceTest {
         final var queue = new MemoryBatchQueue(100);
 
         // Setup a completed job with one error
-        final var requestUrl = String.format(TEST_JOB_URL, UUID.randomUUID().toString()) + "?since=2020-02-20T12:00:00.000-05:00";
+        final var requestUrl = String.format(TEST_JOB_URL, UUID.randomUUID()) + "?since=2020-02-20T12:00:00.000-05:00";
         final var jobID = queue.createJob(orgID,
                 TEST_ORG_NPI,
                 TEST_PROVIDER_NPI,
@@ -285,7 +284,7 @@ public class JobResourceTest {
         runningJob.fetchNextPatient(AGGREGATOR_ID);
         final var results = JobQueueBatch.validResourceTypes.stream()
                 .map(resourceType -> runningJob.addJobQueueFile(resourceType, 0, 1))
-                .collect(Collectors.toList());
+                .toList();
 
         queue.completeBatch(runningJob, AGGREGATOR_ID);
 
