@@ -19,6 +19,11 @@ import gov.cms.dpc.fhir.annotations.FHIR;
 import gov.cms.dpc.fhir.annotations.FHIRParameter;
 import gov.cms.dpc.fhir.converters.FHIREntityConverter;
 import io.dropwizard.hibernate.UnitOfWork;
+import jakarta.inject.Inject;
+import jakarta.validation.constraints.NotEmpty;
+import jakarta.validation.constraints.NotNull;
+import jakarta.ws.rs.*;
+import jakarta.ws.rs.core.Response;
 import org.apache.commons.lang3.tuple.Pair;
 import org.hl7.fhir.dstu3.model.Group;
 import org.hl7.fhir.dstu3.model.IdType;
@@ -26,17 +31,13 @@ import org.hl7.fhir.dstu3.model.Patient;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import jakarta.inject.Inject;
-import javax.validation.constraints.NotEmpty;
-import javax.validation.constraints.NotNull;
-import javax.ws.rs.*;
-import javax.ws.rs.core.Response;
 import java.time.OffsetDateTime;
 import java.time.ZoneOffset;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
+
+import static org.hl7.fhir.instance.model.api.IAnyResource.SP_RES_ID;
 
 public class GroupResource extends AbstractGroupResource {
 
@@ -101,7 +102,7 @@ public class GroupResource extends AbstractGroupResource {
     @FHIR
     @UnitOfWork
     @Override
-    public List<Group> rosterSearch(@QueryParam(Group.SP_RES_ID) UUID rosterID,
+    public List<Group> rosterSearch(@QueryParam(SP_RES_ID) UUID rosterID,
                                     @NotEmpty @QueryParam("_tag") String organizationToken,
                                     @QueryParam(Group.SP_CHARACTERISTIC_VALUE) String providerNPI,
                                     @QueryParam(Group.SP_MEMBER) String patientID) {
@@ -117,7 +118,7 @@ public class GroupResource extends AbstractGroupResource {
         return this.rosterDAO.findEntities(rosterID, organizationID, providerIDPart, patientID)
                 .stream()
                 .map(r -> this.converter.toFHIR(Group.class, r))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @GET
@@ -141,7 +142,7 @@ public class GroupResource extends AbstractGroupResource {
                     p.addIdentifier().setSystem(DPCIdentifierSystem.MBI.getSystem()).setValue(mbi);
                     return p;
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
 
@@ -201,7 +202,7 @@ public class GroupResource extends AbstractGroupResource {
         List<PatientEntity> patientEntities = verifyAndGetMembers(groupUpdate);
         List<UUID> patientIds = patientEntities.stream()
             .map(PatientEntity::getID)
-            .collect(Collectors.toList());
+            .toList();
 
         // Check which patients are already part of the roster and mark them active as of today
         OffsetDateTime periodBegin = OffsetDateTime.now(ZoneOffset.UTC);
@@ -220,7 +221,7 @@ public class GroupResource extends AbstractGroupResource {
         List<UUID> existingPatientIds = existingAttributions.stream()
             .map(AttributionRelationship::getPatient)
             .map(PatientEntity::getID)
-            .collect(Collectors.toList());
+            .toList();
 
         List<AttributionRelationship> newAttributions = patientEntities.stream()
             .filter( patient -> !existingPatientIds.contains(patient.getID()))
@@ -229,7 +230,7 @@ public class GroupResource extends AbstractGroupResource {
                 attribution.setPeriodEnd(periodEnd);
                 return attribution;
             })
-            .collect(Collectors.toList());
+            .toList();
 
         // Last but not least, save our changes
         Stream.concat(existingAttributions.stream(), newAttributions.stream())
@@ -341,7 +342,7 @@ public class GroupResource extends AbstractGroupResource {
             .map(Group.GroupMemberComponent::getEntity)
             .map(ref -> UUID.fromString(new IdType(ref.getReference()).getIdPart()))
             .distinct()
-            .collect(Collectors.toList());
+            .toList();
 
         // Get corresponding PatientEntities
         // As of 7/30/24, we're currently capped at 1350 patients per group.  If we ever raise that it might be worth
